# scout

./: .gitignore  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
DEL/: html.ipynb
modules/risk/: assessment.py  models.py  prompts.py
src/scout/: __main__.py  api.py  cli.py
src/scout/experiments/: recursive.ipynb  risk.ipynb
src/scout/frontend/: app.py
src/scout/risk/: TODO.md  assessment.py  assessment_examples.json  dynamic-few-shot.ipynb  models.py  prompts.py  risk.ipynb
